--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
+@font-face {
+  font-family: "univers67";
+  src: url(./fonts/univers67.otf) format("opentype");
+}
+
+h1 {
+  text-align: left;
+  font-size: 24px;
+  margin: 0px;
+}
+
+hr {
+  background-image: url(images/horizontaldivider.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  border: 0px;
+  display: block;
+  height: 5px;
+  margin: 5px 0px;
+}
+
+.window {
+  background-image: url(images/window_bg.png);
+  background-repeat: no-repeat;
+  margin: 10px;
+  padding: 30px 40px;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
+  font-family: "univers67";
+  text-shadow: 2px 2px 3px black;
 }
 
-.App-link {
-  color: #61dafb;
+.EquipmentGrid {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  /* padding-top: 120px; */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Stats {
+  color: #c5c29e;
 }
