--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,10 @@ h1 {
   margin: 0px;
   text-align: left;
 }
+h2 {
+  font-size: 20px;
+  margin: 0px;
+}
 
 hr {
   background-image: url(images/horizontaldivider.png);
