--- a/src/tooltips/ToolTips.css
+++ b/src/tooltips/ToolTips.css
@@ -1,15 +1,31 @@
-/* override react-tooltip styles with !important */
+/* tooltips */
+
 .tooltip {
-  background: url(../images/munge_overlay.png) !important;
-  /* background-color: rgba(0, 0, 0, 0.7) !important; */
-  background-repeat: no-repeat !important;
-  border-radius: 0 !important;
+  background: url(../images/munge_overlay.png);
+  background-color: rgba(0, 0, 0, 0.9);
+  background-repeat: no-repeat;
+  border-image: linear-gradient(#dcd7b6, #6b613b) 4;
+  border-style: solid;
+  border-width: 4px;
+  color: #c5c29e;
+  font-family: "univers67";
+  line-height: 1.5;
+  padding: 10px;
+  text-shadow: 2px 2px 3px black;
+  width: 350px;
 }
 
 .tooltip-item-set {
-  color: yellowgreen;
-  background-color: black;
-  border-image: linear-gradient(#dcd7b6, #6b613b) 30 !important;
-  border-style: solid !important;
-  border-width: 3px !important;
+  align-content: center;
+  text-align: center;
+}
+.tooltip-item-set h1 {
+  text-align: center;
+}
+
+.tooltip-item-set-type {
+  float: left;
+}
+.tooltip-item-set-location {
+  float: right;
 }
