--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,11 @@ hr {
   margin: 5px 0px;
 }
 
+.btn-check {
+  position: absolute;
+  clip: rect(0,0,0,0);
+  pointer-events: none;
+}
 
 /* any window section should use this class */
 .window {
