--- a/src/inventory/Inventory.css
+++ b/src/inventory/Inventory.css
@@ -1,5 +1,5 @@
 .Inventory {
-  background-size: 468px 910px, cover;
+  background-size: 468px 850px, cover;
 }
 
 .Inventory hr {
@@ -14,7 +14,7 @@
 }
 .inventory-container tbody {
   display: block;
-  height: 730px;
+  height: 630px;
   overflow-y: auto;
 }
 .inventory-container tr {
@@ -28,4 +28,61 @@
 .inventory-container td img {
   vertical-align: middle;
   margin-right: 5px;
+}
+
+.inventory-item-row {
+  padding-left: 25px;
+}
+
+.inventory-filter-button-toolbar button {
+  background-color: transparent;
+  background-position: center;
+  background-size: contain;
+  border: none;
+  width: 32px;
+  height: 32px;
+  display: inline-block;
+}
+.inventory-filter-button-toolbar button:hover {
+  transition: all 1s;
+  background-size: 125%;
+}
+
+.inventory-filter-button-all {
+  background-image: url(../images/inventory_tabicon_all_up.png);
+}
+.inventory-filter-button-all:hover {
+  background-image: 
+    url(../images/inventory_tabicon_all_up.png),
+    url(../images/inventory_tabicon_all_over.png);
+}
+.inventory-filter-button-all.selected {
+  background-image: url(../images/inventory_tabicon_all_down.png);
+}
+
+.inventory-filter-button-weapons {
+  background-image: url(../images/inventory_tabicon_weapons_up.png);
+}
+.inventory-filter-button-weapons:hover {
+  background-image:
+    url(../images/inventory_tabicon_weapons_up.png),
+    url(../images/inventory_tabicon_weapons_over.png);
+}
+
+.inventory-filter-button-armor {
+  background-image: url(../images/inventory_tabicon_armor_up.png);
+}
+.inventory-filter-button-armor:hover {
+  background-image:
+    url(../images/inventory_tabicon_armor_up.png),
+    url(../images/inventory_tabicon_armor_over.png);
+}
+
+.inventory-filter-button-jewelry {
+  background-image: url(../images/jewelry_tabicon_icon_up.png);
+}
+.inventory-filter-button-jewelry:hover {
+  background-image:
+    url(../images/jewelry_tabicon_icon_up.png),
+    url(../images/jewelry_tabicon_icon_over.png);
 }
