--- a/src/tooltips/ToolTips.css
+++ b/src/tooltips/ToolTips.css
@@ -15,14 +15,14 @@
   width: 350px;
 }
 
+.tooltip h1 {
+  text-align: center;
+}
+
 .tooltip-item-set {
   align-content: center;
   text-align: center;
 }
-.tooltip-item-set h1 {
-  text-align: center;
-}
-
 .tooltip-item-set-type {
   float: left;
 }
