--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,12 @@ h2 {
   margin: 0px;
   text-transform: uppercase;
 }
+h3 {
+  color: white;
+  font-size: 16px;
+  margin: 0px;
+  text-transform: uppercase;
+}
 
 hr {
   background-image: url(images/horizontaldivider.png);
