--- a/src/layouts/Layout.css
+++ b/src/layouts/Layout.css
@@ -6,15 +6,13 @@
   /* padding-top: 120px; */
 }
 
-.ViewBuildLayout {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  /* padding-top: 120px; */
-}
-
 .CreateBuildLayout .Summary {
   background-size: 368px 800px, cover;
   width: 288px;
+}
+
+
+
+.ViewBuildLayout {
+  max-width: 860px;
 }
