--- a/src/tooltips/Tooltips.css
+++ b/src/tooltips/Tooltips.css
@@ -62,3 +62,19 @@
   color: white;
   font-size: 22px;
 }
+
+.tooltip-item-set-bonus-disabled {
+  color: #454545 !important;
+}
+.tooltip-item-set-bonus-disabled .health {
+  color: #730000;
+}
+.tooltip-item-set-bonus-disabled .stamina {
+  color: #004018;
+}
+.tooltip-item-set-bonus-disabled .magicka {
+  color: #000c3c;
+}
+.tooltip-item-set-bonus-disabled .buff {
+  color: #764500;
+}
