properly sort the items in the list

--- a/src/App.css
+++ b/src/App.css
@@ -128,6 +128,11 @@ hr {
   padding: 30px;
   text-align: center;
 }
+.footer a,
+.footer a:visited {
+  color: #c5c29e;
+  text-decoration: none;
+}
 .footer .footer-feedback {
   font-size: 11px;
   margin-bottom: 5px;
