--- a/src/tooltips/Tooltips.css
+++ b/src/tooltips/Tooltips.css
@@ -81,3 +81,6 @@
 .tooltip-item-set-bonus-disabled .buff {
   color: #764500;
 }
+.tooltip-item-set-bonus-disabled .disease-damage {
+  color: #007500;
+}
