--- a/src/tooltips/Tooltips.css
+++ b/src/tooltips/Tooltips.css
@@ -84,3 +84,6 @@
 .tooltip-item-set-bonus-disabled .disease-damage {
   color: #007500;
 }
+.tooltip-item-set-bonus-disabled .poison-damage {
+  color: #002e00;
+}
